fix: use flex-wrap to wrap "Show tokens" button on manage accs

--- a/frontends/web/src/routes/settings/manage-accounts.module.css
+++ b/frontends/web/src/routes/settings/manage-accounts.module.css
@@ -26,6 +26,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     min-height: var(--item-height);
     padding: var(--space-quarter) 0;
